--- a/app/pages/adv/detail.css
+++ b/app/pages/adv/detail.css
@@ -129,39 +129,47 @@
 }
 
 .packetRecord-wrapper .luck-star{
-    width:46%;
+    width:50%;
     background: url(../../images/luck_star_icon.png) no-repeat;
     background-size: 134px 35px;
-    background-position: center center;
+    background-position: .5rem center;
 }
 
 .packetRecord-wrapper .luck-level{
-      width:54%;  
+      width:50%;
+      text-align: right;
+      min-width:160px;
 }
 
 .packetRecord-wrapper .luck-level > div{
     height:100%;
+    min-width: 45px;
+    display: inline-block;
 }
 
 .packetRecord-wrapper .luck-level > div:nth-child(1){
     position: relative;
     background: url(../../images/luck_gold.png) no-repeat;
     background-size: 33px 43px;
-    background-position: center 5px;
+    background-position: right 5px;
 }
 
 .packetRecord-wrapper .luck-level > div:nth-child(2){
     position: relative;
     background: url(../../images/luck_silver.png) no-repeat;
     background-size: 33px 43px;
-    background-position: center  5px;   
+    background-position: right  5px;
 }
 
 .packetRecord-wrapper .luck-level > div:nth-child(3){
     position: relative;
     background: url(../../images/luck_copper.png) no-repeat;
     background-size: 33px 43px;
-    background-position: center  5px;  
+    background-position: right  5px;
+}
+
+.packetRecord-wrapper .luck-level > div:last-child{
+    margin-right:.3rem;
 }
 
 .packetRecord-wrapper .luck-level .luck-header{
@@ -169,9 +177,8 @@
     display: block;
     width :25px;
     height:25px;
-    left:50%;
     top:16.5px;
-    margin-left: -13.5px;
+    right:5px;
     border-radius: 50%;
     background-image: url(../../images/mine_header_icon.png);
     background-repeat: no-repeat;
@@ -181,32 +188,9 @@
 .packetRecord-wrapper .luck-level .gold{
     position: absolute;
     display: block;
-    width:100%;    
-    left:0;
-    bottom:2px;
-    text-align: center;
-    font-size: 10px;
-    color:#333;
-}
-
-.packetRecord-wrapper .luck-level .silver{
-    position: absolute;
-    display: block;
     width:100%;
-    left:0;
+    right:4px;
     bottom:2px;
-    text-align: center;
-    font-size: 10px;
-    color:#333;
-}
-
-.packetRecord-wrapper .luck-level .copper{
-    position: absolute;
-    display: block;
-    width:100%;
-    left:0;
-    bottom:2px;
-    text-align: center;
     font-size: 10px;
     color:#333;
 }
